--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1 class="title-t2">2023 신년계획</h1>
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t2 center">나만의 앱 개발하기</div>
+        <div class="bucket img1-t2 center done">나만의 앱 개발하기</div>
         <div class="bucket img2-t2 center">다이어트 65kg</div>
         <div class="bucket img2-t2 center">일본어공부</div>
         <div class="bucket img1-t2 center">2023년도 현장계획서</div>
